# fast_kendall_sc

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
fast_kendall_sc/: __init__.py  metrics.py
src/: lib.rs
tests/: test_batch.py  test_metrics.py  test_sparse.py
